--- a/index.html
+++ b/index.html
@@ -15,6 +15,78 @@
     <!-- https://pixabay.com/videos/download/video-28745_source.mp4?attachment -->
     <!-- Ocean (720P)-->
     <!-- https://pixabay.com/videos/download/video-31377_tiny.mp4?attachment -->
+
+
+    <!-- https://pixabay.com/videos/download/video-16621_medium.mp4?attachment -->
+
+    <div class="player">
+
+        <!-- playsinline is important for the video to play well on mobile screen devices. By default the video plays on full screen. This is to stop that. -->
+
+        <video src="https://pixabay.com/videos/download/video-16621_medium.mp4?attachment" class="video" playsinline></video>
+
+        <!-- Show controls  -->
+        <div class="show-controls">
+            <!-- Controls container -->
+            <div class="controls-container">
+                <!-- Progress bar -->
+                <div class="progress-range" title='seek'>
+                    <div class="progress-bar"></div>
+                </div>
+
+                <div class="control-group">
+                    <!-- Left controls -->
+                    <div class="controls-left">
+                        <!-- Play/Pause -->
+                        <div class="play-controls">
+                            <i class="fas fa-play" title=play id='play-button'></i>
+
+                        </div>
+
+                        <!-- Volume Controls -->
+                        <div class="volume">
+                            <div class="volume-icon">
+                                <i class="fas fa-volume-up" title='mute' id='volume-icon'></i>
+                            </div>
+
+                            <div class="volume-range" title="change volume">
+                                <div class="volume-bar"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Right controls -->
+                    <div class="controls-right">
+                        <div class="speed" title="Playback Rate">
+                            <select name="playbackRate" class='player-speed'>
+                                <option value="0.5">0.5 x</option>
+                                <option value="0.75">0.75 x</option>
+                                <option value="1" selected>1 x</option>
+                                <option value="1.5">1.5 x</option>
+                                <option value="2">2 x</option>
+                            </select>
+                        </div>
+
+                        <!-- Time -->
+                        <div class="time">
+                            <span class="time-elapsed">00:00</span>
+                            <span class="time-duration">3:40</span>
+                        </div>
+
+                        <!-- Fullscreen -->
+                        <div class="fullscreen">
+                            <i class="fas fa-expand"></i>
+                        </div>
+
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+
+    </div>
+
+
     
     <!-- Script -->
     <script src="script.js"></script>
