--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <!-- playsinline is important for the video to play well on mobile screen devices. By default the video plays on full screen. This is to stop that. -->
 
-        <video src="https://pixabay.com/videos/download/video-16621_medium.mp4?attachment" class="video" playsinline></video>
+        <video src="cars.mp4" playsinline></video>
 
         <!-- Show controls  -->
         <div class="show-controls">
